--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "jquery": "^3.4.1",
     "jquery-ui-dist": "^1.12.1",
     "popper.js": "^1.15.0",
+    "resolve-url-loader": "^3.1.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "webpack-dev-server": "^3.7.2"
   }
 }
